--- a/css/cabildos.css
+++ b/css/cabildos.css
@@ -1,5 +1,13 @@
 #sticky {
   z-index: 10;
+  position: fixed;
+  top: 0;
+  height: 100px;
+  background-color: white;
+}
+
+#bubbles, #cabildo-details {
+  padding-top: 100px;
 }
 
 #cabildo-details {
