--- a/css/cabildos.css
+++ b/css/cabildos.css
@@ -1,9 +1,68 @@
+body {
+  background-color: var(--bs-gray-100);
+  color: var(--bs-gray-700);
+  font-family: Karla;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.form-control {
+  background-color: var(--bs-gray-100);
+}
+
+.cabildo-title {
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 38px;
+}
+
+.bar-chart .line {
+  stroke: var(--bs-gray-600);
+  stroke-width: 0.7px;
+}
+
+.bar-chart .circle {
+  stroke-width: 1.0px;
+}
+
+.bar-chart text {
+  font-size: 12.8px;
+  line-height: 19px;
+}
+
+.comision-title {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+}
+
+.cloud-div span {
+  color: var(--cc-primary);
+  margin-right: 16px;
+}
+
+.tree-group circle {
+  fill: var(--cc-primary);
+}
+
+.tree-group text, .tree-group text tspan {
+  stroke: var(--bs-gray-800);
+}
+
+.tree-group path {
+  stroke: var(--cc-primary);
+  stroke-width: 1px;
+  storke-opacity: 0.4;
+}
+
 #sticky {
   z-index: 10;
   position: fixed;
   top: 0;
   height: 100px;
-  background-color: white;
+  background-color: var(--bs-gray-100);
 }
 
 #back-button {
