--- a/css/cabildos.css
+++ b/css/cabildos.css
@@ -38,9 +38,10 @@ body {
   line-height: 29px;
 }
 
-.cloud-div span {
+.word-div {
   color: var(--cc-primary);
   margin-right: 16px;
+  margin-bottom: 12px;
 }
 
 .tree-group circle {
@@ -48,7 +49,9 @@ body {
 }
 
 .tree-group text, .tree-group text tspan {
-  stroke: var(--bs-gray-800);
+  /* stroke: var(--bs-gray-800); */
+  font-size: 12.8px;
+  line-height: 19px;
 }
 
 .tree-group path {
