--- a/css/cabildos.css
+++ b/css/cabildos.css
@@ -38,8 +38,13 @@ body {
   line-height: 29px;
 }
 
+.cloud-div {
+  margin-top: 30px;
+}
+
 .word-div {
   color: var(--cc-primary);
+  display: inline-block;
   margin-right: 16px;
   margin-bottom: 12px;
 }
