--- a/css/cabildos.css
+++ b/css/cabildos.css
@@ -18,6 +18,10 @@ body {
   line-height: 38px;
 }
 
+.bar-chart {
+  margin: 60px 0;
+}
+
 .bar-chart .line {
   stroke: var(--bs-gray-600);
   stroke-width: 0.7px;
