--- a/css/cabildos.css
+++ b/css/cabildos.css
@@ -48,7 +48,12 @@ body {
 
 #how-to {
   position: relative;
-  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.15);
+  box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+}
+
+#how-to:hover {
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.30);
 }
 
 #legend {
@@ -73,7 +78,7 @@ body {
 }
 
 .cabildo-title {
-  font-weight: 500;
+  font-weight: 700;
   font-size: 32px;
   line-height: 38px;
 }
@@ -115,9 +120,22 @@ body {
 }
 
 .comision-title {
-  font-weight: 500;
+  font-weight: 700;
   font-size: 24px;
-  line-height: 29px;
+  line-height: 38px;
+  margin-bottom: 10px;
+}
+
+.tema-title {
+    font-weight: 700;
+    font-size: 18px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+}
+
+.tema-description {
+  font-size: 14px;
+  margin-left: 20px;
 }
 
 .cloud-div {
