--- a/css/cabildos.css
+++ b/css/cabildos.css
@@ -134,6 +134,7 @@ body {
   font-size: 24px;
   line-height: 38px;
   margin-bottom: 10px;
+  margin-top: 20px;
 }
 
 .tema-title {
@@ -252,12 +253,14 @@ a:hover {
 .ranking-title {
   font-size: 24px;
   font-weight: 700;
+  margin-bottom: 20px;
 }
 
 .ranking-images {
   width: 60%;
   margin-bottom: 40px;
-  margin-left: 18%;
+  margin-left: 10%;
+  margin-top: 40px;
 }
 
 .word-network {
