--- a/css/cabildos.css
+++ b/css/cabildos.css
@@ -133,19 +133,20 @@ body {
   font-weight: 700;
   font-size: 24px;
   line-height: 38px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  margin-top: 80px;
 }
 
 .tema-title {
     font-weight: 700;
     font-size: 18px;
     margin-bottom: 10px;
-    margin-left: 20px;
+    margin-left: 48px;
 }
 
 .tema-description {
   font-size: 14px;
-  margin-left: 20px;
+  margin-left: 47px;
 }
 
 .cloud-div, .general-cloud-div {
