--- a/css/cabildos.css
+++ b/css/cabildos.css
@@ -1,11 +1,12 @@
 body {
   background-color: var(--bs-gray-100);
   color: var(--bs-gray-700);
-  font-family: Karla;
+  font-family: 'Karla', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 24px;
+  margin-bottom: 30px;
 }
 
 #title {
@@ -41,6 +42,7 @@ body {
   font-size: 20px;
   line-height: 24px;
   text-transform: uppercase;
+  margin-top: 2px;
 }
 
 .form-control {
@@ -88,7 +90,7 @@ body {
 }
 
 .cabildo-title {
-  font-weight: 700;
+  font-weight: 600;
   font-size: 32px;
   line-height: 38px;
 }
@@ -130,7 +132,7 @@ body {
 }
 
 .comision-title {
-  font-weight: 700;
+  font-weight: 600;
   font-size: 24px;
   line-height: 38px;
   margin-bottom: 20px;
@@ -138,7 +140,7 @@ body {
 }
 
 .tema-title {
-    font-weight: 700;
+    font-weight: 600;
     font-size: 18px;
     margin-bottom: 10px;
     margin-left: 48px;
@@ -191,6 +193,22 @@ body {
 
 #back-button {
   position: fixed;
+  top: 224px;
+  right: 20px;
+  background-color: var(--cc-primary);
+  color: var(--bs-gray-100);
+  border-color: var(--cc-primary);
+}
+
+#back-button:hover {
+  color: var(--cc-primary);
+  border-color: var(--cc-primary);
+  background-color: var(--bs-gray-100);
+}
+
+.btn-method {
+  position: fixed;
+  top: 98px !important; 
 }
 
 #up-button {
@@ -200,7 +218,7 @@ body {
 }
 
 #bubbles, #cabildo-details {
-  padding-top: 234px;
+  padding-top: 14%;
 }
 
 #cabildo-details {
@@ -210,6 +228,7 @@ body {
 .menu-links {
   text-decoration: none;
   color: var(--bs-gray-700);
+  text-align: right;
 }
 
 a:hover {
@@ -219,16 +238,6 @@ a:hover {
 .smaller-text {
   font-size: 14px;
   margin-bottom: 4px;
-}
-
-.btn-outline-primary {
-  color: var(--cc-primary);
-  border-color: var(--cc-primary);
-}
-
-.btn-outline-primary:hover {
-  background-color: var(--cc-primary);
-  border-color: var(--cc-primary);
 }
 
 .btn-fab {
@@ -252,13 +261,16 @@ a:hover {
 
 .ranking-title {
   font-size: 24px;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 .ranking-images {
   width: 60%;
   margin-bottom: 40px;
   margin-left: 18%;
+}
+.ranking-description {
+  margin-bottom: 30px;
 }
 
 .word-network {
@@ -272,3 +284,31 @@ a:hover {
   width: 100%;
   height: auto;
 }
+
+h2 {
+  font-weight: 600;
+  margin-bottom: 30px;
+  margin-top: 20px;
+}
+
+h3 {
+  margin-bottom: 20px;
+  margin-top: 20px;
+  color: var(--cc-primary);
+}
+
+h4 {
+  margin-bottom: 20px;
+  margin-top: 20px;
+  color: var(--cc-primary);
+}
+
+h5 {
+  font-weight: 600;
+}
+
+.p-small {
+  font-size: 0.8rem;
+}
+
+
