--- a/css/cabildos.css
+++ b/css/cabildos.css
@@ -335,4 +335,13 @@ h5 {
   .tema-title, .tema-description, .cloud-div {
     margin-left: 12px;
   }
+
+  .ranking-images {
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .ranking-images img {
+    width: 100%;
+  }
 }
